--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@emotion/core": "10.1.1",
-    "@emotion/styled": "10.0.27",
+    "@emotion/react": "11.1.4",
+    "@emotion/styled": "11.0.0",
     "@types/react-transition-group": "4.4.0",
     "nanoid": "3.1.20",
     "react": "17.0.1",
@@ -16,7 +16,7 @@
     "react-transition-group": "4.4.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.0",
+    "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
     "typescript": "4.1.3"
   },
